Add top-bar navigation

--- a/data/categories.yml
+++ b/data/categories.yml
@@ -1,5 +1,5 @@
 -
-  title: Horaire
+  title: Horaires
   description: Les heures d’ouverture du musée du Louvre-Lens
   icon: fa-clock-o
   path: /hours.html
