Add custom google font

--- a/data/categories.yml
+++ b/data/categories.yml
@@ -1,6 +1,6 @@
 -
   title: Horaires
-  description: Les heures d’ouverture du musée du Louvre-Lens
+  description: Les heures d’ouverture du musée
   icon: fa-clock-o
   path: /horaires.html
 -
