--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "slimmer",
+  "name": "louvrelens",
   "version": "0.0.1",
-  "homepage": "https://github.com/polymatt/slimmer",
+  "homepage": "https://github.com/flexbox/louvrelens",
   "authors": [
-    "polymatt <matt@polymathic.me>"
+    "flexbox <dleuliette@gmail.com>"
   ],
-  "description": "Slim/Sass/Coffee Starter template for Middleman",
+  "description": "Refactor for a museum website",
   "license": "MIT",
   "private": false,
   "ignore": [
