Add pages shop & agenda

--- a/data/categories.yml
+++ b/data/categories.yml
@@ -21,4 +21,4 @@
   title: Agenda
   description: Tous les évènements à ne pas manquer
   icon: fa-calendar-o
-  path: /calendar.html
+  path: /agenda.html
